--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/react-hooks": "^8.0.0",
     "@types/node": "16.11.11",
     "@types/react": "17.0.37",
     "autoprefixer": "^10.4.0",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "postcss": "^8.4.4",
     "tailwindcss": "^3.0.23",
     "typescript": "4.5.2"
